--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,75 @@
+# Base Docker Compose configuration
+# Use override files for environment-specific settings:
+# - Development: docker-compose.dev.yml (default)
+# - Staging: docker-compose.staging.yml
+# - Production: docker-compose.prod.yml
+#
+# Usage:
+#   Development: docker compose up
+#   Staging: docker compose -f docker-compose.yml -f docker-compose.staging.yml up
+#   Production: docker compose -f docker-compose.yml -f docker-compose.prod.yml up
+
 services:
   db:
-    image: postgres:16
+    image: postgres:${POSTGRES_VERSION:-16}
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: microloans
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-microloans}
+      POSTGRES_INITDB_ARGS: ${POSTGRES_INITDB_ARGS:-}
     ports:
-      - "5432:5432"
+      - "${DB_PORT:-5432}:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - ${DB_VOLUME_NAME:-db_data}:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d microloans"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-microloans}"]
+      interval: ${DB_HEALTHCHECK_INTERVAL:-5s}
+      timeout: ${DB_HEALTHCHECK_TIMEOUT:-5s}
+      retries: ${DB_HEALTHCHECK_RETRIES:-10}
+    networks:
+      - app-network
+    restart: ${RESTART_POLICY:-unless-stopped}
 
   api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
-      FLASK_ENV: development
-      DATABASE_URL: postgresql+psycopg2://postgres:postgres@db:5432/microloans
-      PORT: 8000
+      FLASK_ENV: ${FLASK_ENV:-development}
+      DATABASE_URL: postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-microloans}
+      PORT: ${API_PORT:-8000}
       PYTHONPATH: /app
+      LOG_LEVEL: ${LOG_LEVEL:-INFO}
+      GUNICORN_WORKERS: ${GUNICORN_WORKERS:-2}
+      GUNICORN_TIMEOUT: ${GUNICORN_TIMEOUT:-30}
+      GUNICORN_ACCESS_LOG: ${GUNICORN_ACCESS_LOG:-True}
     depends_on:
       db:
         condition: service_healthy
+    expose:
+      - "${API_PORT:-8000}"
+    networks:
+      - app-network
+    restart: ${RESTART_POLICY:-unless-stopped}
+
+  nginx:
+    image: nginx:${NGINX_VERSION:-alpine}
     ports:
-      - "8000:8000"
-    command: gunicorn -w 2 -b 0.0.0.0:8000 wsgi:app
+      - "${NGINX_HTTP_PORT:-80}:80"
+      - "${NGINX_HTTPS_PORT:-443}:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+    depends_on:
+      - api
+    networks:
+      - app-network
+    restart: ${RESTART_POLICY:-unless-stopped}
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   db_data:
+    name: ${DB_VOLUME_NAME:-dummy-branch-app_db_data}
